peach/platform/grafana/config/httproute.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: grafana
  namespace: grafana
  labels:
    app: grafana
    app.kubernetes.io/part-of: grafana
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: contour
    namespace: projectcontour
  rules:
  - matches:
    - headers:
      - type: RegularExpression
        name: Host
        value: grafana\..+
    backendRefs:
    - kind: Service
      name: grafana-service
      port: 80
